--- a/packages/prosekit/tsconfig.json
+++ b/packages/prosekit/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "temp",
+    "outDir": "temp"
   },
-  "include": ["./src", "./*.js", "./*.ts"],
+  "include": ["./src", "./*.js", "./*.ts"]
 }
