--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     ],
     "composite": true,
     "allowJs": true,
-    /* Bundling */
     "moduleResolution": "bundler",
     "useDefineForClassFields": false,
     "resolveJsonModule": true,
@@ -19,7 +18,6 @@
     "declaration": true,
     "declarationMap": true,
     "emitDeclarationOnly": true,
-    /* Linting */
     "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
@@ -27,7 +25,7 @@
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "./*.js",
@@ -37,10 +35,10 @@
   "files": [],
   "references": [
     {
-      "path": "packages/prosekit/tsconfig.json",
+      "path": "packages/prosekit/tsconfig.json"
     },
     {
-      "path": "packages/extensions/tsconfig.json",
+      "path": "packages/extensions/tsconfig.json"
     }
   ],
 }
